--- a/src/App.fxml
+++ b/src/App.fxml
@@ -2,15 +2,16 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controll">
    <children>
-      <VBox fx:id="listcommon" layoutX="213.0" layoutY="112.0" prefHeight="336.0" prefWidth="382.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="387.0" AnchorPane.topAnchor="145.0" />
-      <TextField fx:id="input" layoutX="21.0" layoutY="112.0" prefHeight="25.0" prefWidth="182.0" />
+      <TextField fx:id="input" layoutX="21.0" layoutY="112.0" onKeyReleased="#suggestion" prefHeight="25.0" prefWidth="182.0" />
       <VBox layoutX="300.0" layoutY="112.0" prefHeight="276.0" prefWidth="289.0">
          <children>
             <Button fx:id="listen" mnemonicParsing="false" onAction="#speakup">
@@ -22,5 +23,10 @@
          </children>
       </VBox>
       <Button fx:id="search" layoutX="223.0" layoutY="112.0" mnemonicParsing="false" onAction="#translate" />
+      <BorderPane layoutX="12.0" layoutY="162.0" prefHeight="200.0" prefWidth="200.0">
+         <center>
+            <ListView fx:id="listCommon" onMouseReleased="#getMeaning" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+         </center>
+      </BorderPane>
    </children>
 </AnchorPane>
